--- a/identity-service/src/main/resources/application.yaml
+++ b/identity-service/src/main/resources/application.yaml
@@ -28,6 +28,15 @@ spring:
       open-in-view: false
       hibernate:
          ddl-auto: update
+   kafka:
+      bootstrap-servers: localhost:9094
+      producer:
+         key-serializer: org.apache.kafka.common.serialization.StringSerializer
+         value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+   servlet:
+      multipart:
+         max-file-size: 10MB
+         max-request-size: 10MB
 
 # JWT configuration
 jwt:
