--- a/mobile-app/pubspec.yaml
+++ b/mobile-app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: harmony_supply_chain
+name: harmony_scms
 description: "Mobile application for Harmony Supply Chain"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
