--- a/profile-service/pom.xml
+++ b/profile-service/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.tth</groupId>
-        <artifactId>harmony-supply-chain</artifactId>
+        <artifactId>hscm</artifactId>
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
