--- a/.github/workflows/identity-service-ci.yaml
+++ b/.github/workflows/identity-service-ci.yaml
@@ -35,7 +35,7 @@ jobs:
             with:
                registry: ghcr.io
                username: ${{ github.actor }}
-               password: ${{ secrets.GITHUB_TOKEN }}
+               password: ${{ secrets.PAT_TOKEN }}
          -  name: Build and push Docker images
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/build-push-action@v6
