--- a/.github/workflow-template.yaml
+++ b/.github/workflow-template.yaml
@@ -49,7 +49,7 @@ jobs:
             with:
                registry: ghcr.io
                username: ${{ github.actor }}
-               password: ${{ secrets.GITHUB_TOKEN }}
+               password: ${{ secrets.PAT_TOKEN }}
          -  name: Build and push Docker images
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/build-push-action@v6
