--- a/common-library/pom.xml
+++ b/common-library/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>jnanoid</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
