--- a/.github/workflows/product-service-ci.yaml
+++ b/.github/workflows/product-service-ci.yaml
@@ -28,7 +28,7 @@ jobs:
                fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
          -  uses: ./.github/workflows/actions
          -  name: Run Maven Build Command
-            run: mvn clean install -pl product-service -am -DskipTests
+            run: mvn clean install product-service -DskipTests
          -  name: Log in to the Container registry
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/login-action@v3
