--- a/cart-service/pom.xml
+++ b/cart-service/pom.xml
@@ -20,6 +20,14 @@
             <version>${revision}</version>
         </dependency>
         <dependency>
+            <groupId>com.tth</groupId>
+            <artifactId>common-library</artifactId>
+            <version>${revision}</version>
+            <classifier>tests</classifier>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
