--- a/shipping-service/Dockerfile
+++ b/shipping-service/Dockerfile
@@ -1,4 +1,4 @@
-#FROM eclipse-temurin:21-jre-alpine
-FROM amazoncorretto:21.0.4
+#FROM amazoncorretto:21.0.4
+FROM eclipse-temurin:21-jre-alpine
 COPY target/*.jar app.jar
 ENTRYPOINT ["java", "-jar", "/app.jar"]
