--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,29 @@ name: hscm
 
 networks:
    hscm-network:
-      external: true
       driver: bridge
       name: hscm-network
 
+volumes:
+   mysql:
+
 services:
-   hscm-nginx:
-      image: 'nginx:1.25.3'
-      container_name: hscm-nginx
-      hostname: hscm-nginx
-      restart: unless-stopped
-      volumes:
-         - ./nginx/templates:/etc/nginx/templates
-         - ./nginx/configuration/custom_proxy_settings.conf:/etc/nginx/conf.d/custom_proxy_settings.conf
-      ports:
-         - "80:80"
-      networks:
-         - hscm-network
-   hscm-kafka:
+   #   hscm-nginx:
+   #      image: 'nginx:1.25.3'
+   #      container_name: hscm-nginx
+   #      hostname: hscm-nginx
+   #      restart: unless-stopped
+   #      volumes:
+   #         - ./nginx/templates:/etc/nginx/templates
+   #         - ./nginx/configuration/custom_proxy_settings.conf:/etc/nginx/conf.d/custom_proxy_settings.conf
+   #      ports:
+   #         - "80:80"
+   #      networks:
+   #         - hscm-network
+   kafka:
       image: 'bitnami/kafka:3.7.0'
       container_name: hscm-kafka
-      hostname: hscm-kafka
+      hostname: kafka
       ports:
          - '9094:9094'
       environment:
@@ -35,22 +37,23 @@ services:
          - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       networks:
          - hscm-network
-   hscm-mysql:
+   mysql:
       image: 'mysql:8.0.39-debian'
       container_name: hscm-mysql
-      hostname: hscm-mysql
+      hostname: mysql
       ports:
          - '3306:3306'
       volumes:
-         - ./mysql-initial.sql:/docker-entrypoint-initdb.d/mysql-initial.sql
+         - .docker/db/mysql_inital.sql:/docker-entrypoint-initdb.d/mysql_inital.sql
+         - mysql:/var/lib/mysql
       environment:
          - MYSQL_ROOT_PASSWORD=root
       networks:
          - hscm-network
-   hscm-mongodb:
+   mongodb:
       image: 'bitnami/mongodb:7.0.11'
       container_name: hscm-mongodb
-      hostname: hscm-mongodb
+      hostname: mongodb
       ports:
          - '27017:27017'
       environment:
@@ -58,10 +61,10 @@ services:
          - MONGODB_ROOT_PASSWORD=root
       networks:
          - hscm-network
-   hscm-neo4j:
+   neo4j:
       image: 'neo4j:latest'
       container_name: hscm-neo4j
-      hostname: hscm-neo4j
+      hostname: neo4j
       ports:
          - '7474:7474'
          - '7687:7687'
@@ -88,8 +91,10 @@ services:
       ports:
          - '8081:8081'
       environment:
-         - MONGODB_URI=mongodb://root:root@hscm-mongodb:27017/cart_service?authSource=admin
+         - MONGODB_URI=mongodb://root:root@mongodb:27017/cart_service?authSource=admin
          - PRODUCT_SERVICE_URL
+      depends_on:
+         - mongodb
       networks:
          - hscm-network
    hscm-profile:
@@ -102,6 +107,9 @@ services:
          - NEO4J_URI
          - NEO4J_USERNAME
          - NEO4J_PASSWORD
+      depends_on:
+         - neo4j
+         - hscm-cart
       networks:
          - hscm-network
    hscm-identity:
@@ -111,7 +119,7 @@ services:
       ports:
          - '8083:8083'
       environment:
-         - DBMS_URL=jdbc:mysql://hscm-mysql:3306/identity_service
+         - DBMS_URL=jdbc:mysql://mysql:3306/identity_service
          - DBMS_USERNAME
          - DBMS_PASSWORD
          - JWT_SIGNER_KEY
@@ -122,6 +130,9 @@ services:
          - IDENTITY_REDIRECT_URI
          - PROFILE_SERVICE_URL
          - FILE_SERVICE_URL
+      depends_on:
+         - mysql
+         - hscm-profile
       networks:
          - hscm-network
    hscm-product:
@@ -131,8 +142,11 @@ services:
       ports:
          - '8084:8084'
       environment:
-         - MONGODB_URI=mongodb://root:root@hscm-mongodb:27017/product_service?authSource=admin
+         - MONGODB_URI=mongodb://root:root@mongodb:27017/product_service?authSource=admin
          - PROFILE_SERVICE_URL
+      depends_on:
+         - mongodb
+         - hscm-identity
       networks:
          - hscm-network
    hscm-rating:
@@ -142,9 +156,12 @@ services:
       ports:
          - '8085:8085'
       environment:
-         - MONGODB_URI=mongodb://root:root@hscm-mongodb:27017/rating_service?authSource=admin
+         - MONGODB_URI=mongodb://root:root@mongodb:27017/rating_service?authSource=admin
          - IDENTITY_SERVICE_URL
          - PROFILE_SERVICE_URL
+      depends_on:
+         - mongodb
+         - hscm-product
       networks:
          - hscm-network
    hscm-inventory:
@@ -154,10 +171,13 @@ services:
       ports:
          - '8086:8086'
       environment:
-         - DBMS_URL=jdbc:mysql://hscm-mysql:3306/inventory_service
+         - DBMS_URL=jdbc:mysql://mysql:3306/inventory_service
          - DBMS_USERNAME
          - DBMS_PASSWORD
          - PRODUCT_SERVICE_URL
+      depends_on:
+         - mysql
+         - hscm-rating
       networks:
          - hscm-network
    hscm-order:
@@ -167,13 +187,16 @@ services:
       ports:
          - '8087:8087'
       environment:
-         - DBMS_URL=jdbc:mysql://hscm-mysql:3306/order_service
+         - DBMS_URL=jdbc:mysql://mysql:3306/order_service
          - DBMS_USERNAME
          - DBMS_PASSWORD
-         - STRIPE_SECRET_KEY
+         - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
          - IDENTITY_SERVICE_URL
          - PRODUCT_SERVICE_URL
          - INVENTORY_SERVICE_URL
+      depends_on:
+         - mysql
+         - hscm-inventory
       networks:
          - hscm-network
    hscm-shipping:
@@ -181,10 +204,13 @@ services:
       image: ghcr.io/hiepthanhtran/hscm-shipping-service:latest
       container_name: hscm-shipping
       ports:
-         - '8087:8087'
+         - '8088:8088'
       environment:
-         - MONGODB_URI=mongodb://root:root@hscm-mongodb:27017/shipping_service?authSource=admin
+         - MONGODB_URI=mongodb://root:root@mongodb:27017/shipping_service?authSource=admin
          - IDENTITY_SERVICE_URL
+      depends_on:
+         - mysql
+         - hscm-order
       networks:
          - hscm-network
    hscm-notification:
@@ -194,9 +220,11 @@ services:
       ports:
          - '8886:8886'
       environment:
-         - MONGODB_URI=mongodb://root:root@hscm-mongodb:27017/notification_service?authSource=admin
+         - MONGODB_URI=mongodb://root:root@mongodb:27017/notification_service?authSource=admin
          - EMAIL_SERVICE_URL
-         - MAIL_API_KEY
+         - MAIL_API_KEY=${MAIL_API_KEY}
+      depends_on:
+         - mongodb
       networks:
          - hscm-network
    hscm-file:
@@ -206,9 +234,9 @@ services:
       ports:
          - '8887:8887'
       environment:
-         - AWS_ACCESS_KEY_ID
-         - AWS_SECRET
-         - S3_BUCKET_NAME
+         - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+         - AWS_SECRET=${AWS_SECRET}
+         - S3_BUCKET_NAME=${S3_BUCKET_NAME}
       networks:
          - hscm-network
    hscm-api-gateway:
