--- a/order-service/src/main/resources/application.yaml
+++ b/order-service/src/main/resources/application.yaml
@@ -22,7 +22,7 @@ spring:
       hibernate:
          ddl-auto: update
    kafka:
-      bootstrap-servers: localhost:9094
+      bootstrap-servers: PLAINTEXT://kafka:9094
       producer:
          key-serializer: org.apache.kafka.common.serialization.StringSerializer
          value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
