add sample data

--- a/cart-service/src/main/resources/application.yaml
+++ b/cart-service/src/main/resources/application.yaml
@@ -15,6 +15,11 @@ spring:
    data:
       mongodb:
          uri: ${MONGODB_URI:mongodb://root:root@localhost:27017/cart_service?authSource=admin}
+   kafka:
+      bootstrap-servers: PLAINTEXT://kafka:9094
+      producer:
+         key-serializer: org.apache.kafka.common.serialization.StringSerializer
+         value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
 # Application configuration
 app:
