--- a/product-service/src/main/resources/application.yaml
+++ b/product-service/src/main/resources/application.yaml
@@ -15,6 +15,19 @@ spring:
    data:
       mongodb:
          uri: ${MONGODB_URI:mongodb://root:root@localhost:27017/product_service?authSource=admin}
+   kafka:
+      bootstrap-servers: PLAINTEXT://kafka:9094
+      producer:
+         key-serializer: org.apache.kafka.common.serialization.StringSerializer
+         value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      consumer:
+         auto-offset-reset: earliest
+         group-id: product-service-group
+         key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+         value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+         properties:
+            spring.json.trusted.packages: "*"
+            spring.json.value.default.type: "com.tth.event.dto.NotificationEvent"
    servlet:
       multipart:
          max-file-size: 10MB
