--- a/profile-service/src/main/resources/application.yaml
+++ b/profile-service/src/main/resources/application.yaml
@@ -17,3 +17,16 @@ spring:
       authentication:
          username: ${NEO4J_USERNAME:neo4j}
          password: ${NEO4J_PASSWORD:admin@123}
+   kafka:
+      bootstrap-servers: PLAINTEXT://kafka:9094
+      producer:
+         key-serializer: org.apache.kafka.common.serialization.StringSerializer
+         value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      consumer:
+         auto-offset-reset: earliest
+         group-id: profile-service-group
+         key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+         value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+         properties:
+            spring.json.trusted.packages: "*"
+            spring.json.value.default.type: "com.tth.event.dto.NotificationEvent"
