--- a/shipping-service/Dockerfile
+++ b/shipping-service/Dockerfile
@@ -1,4 +1,7 @@
 #FROM eclipse-temurin:21-jre-alpine
 FROM amazoncorretto:21.0.4
+RUN apk add --no-cache bash
+COPY wait-for-it.sh wait-for-it.sh
+RUN chmod +x wait-for-it.sh
 COPY target/*.jar app.jar
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+ENTRYPOINT [ "./wait-for-it.sh", "order-service:8087", "--timeout=300", "--", "java", "-jar", "/app.jar" ]
