--- a/file-service/src/main/resources/application.yaml
+++ b/file-service/src/main/resources/application.yaml
@@ -12,6 +12,19 @@ server:
 spring:
    application:
       name: file-service
+   kafka:
+      bootstrap-servers: PLAINTEXT://kafka:9094
+      producer:
+         key-serializer: org.apache.kafka.common.serialization.StringSerializer
+         value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      consumer:
+         auto-offset-reset: earliest
+         group-id: file-service-group
+         key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+         value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+         properties:
+            spring.json.trusted.packages: "*"
+            spring.json.value.default.type: "com.tth.event.dto.NotificationEvent"
    servlet:
       multipart:
          max-file-size: 10MB
