--- a/inventory-service/Dockerfile
+++ b/inventory-service/Dockerfile
@@ -1,7 +1,13 @@
-#FROM eclipse-temurin:21-jre-alpine
-FROM amazoncorretto:21.0.4
+#FROM amazoncorretto:21.0.4
+
+FROM eclipse-temurin:21-jre-alpine
+
 RUN apk add --no-cache bash
+
 COPY wait-for-it.sh wait-for-it.sh
+
 RUN chmod +x wait-for-it.sh
+
 COPY target/*.jar app.jar
+
 ENTRYPOINT [ "./wait-for-it.sh", "rating-service:8085", "--timeout=300", "--", "java", "-jar", "/app.jar" ]
